--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heart">❤️ My Dearest Michelle ❤️</h1>
+        <h1 class="heart">❤️ My Dearest Miriam ❤️</h1>
         <p>My love for you is not bound by time—it is deep, unwavering, and infinite.</p>
         <p>Through every joy and every challenge, you remain the most valuable part of my life.</p>
         <p>You are my strength, my peace, and the most beautiful soul I have ever known.</p>
