--- a/index.html
+++ b/index.html
@@ -1,50 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Timeless Expression of Love</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(to right, black, #4B0082);
-            font-family: 'Georgia', serif;
-            color: white;
-            text-align: center;
-        }
-        .container {
-            background-color: rgba(75, 0, 130, 0.9);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0px 6px 12px rgba(255, 255, 255, 0.3);
-            max-width: 500px;
-        }
-        h1 {
-            font-size: 32px;
-            font-weight: bold;
-            letter-spacing: 1px;
-        }
-        p {
-            font-size: 20px;
-            line-height: 1.6;
-            font-style: italic;
-        }
-        .heart {
-            font-size: 28px;
-            color: crimson;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>For a Beautiful Soul</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap');
+
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #2c3e50, #8e44ad);
+      font-family: 'Quicksand', sans-serif;
+      height: 100vh;
+      overflow: hidden;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    .letter {
+      background-image:
+        linear-gradient(to right, rgba(255,255,255,0.05), rgba(255,255,255,0.05)),
+        linear-gradient(135deg, #a18cd1, #fbc2eb);
+      border-radius: 16px;
+      padding: 30px;
+      max-width: 600px;
+      z-index: 2;
+      backdrop-filter: blur(14px);
+      color: #fff;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
+      border: 2px solid transparent;
+      background-clip: content-box, border-box;
+    }
+
+    h2 {
+      color: #ffd8f0;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+      margin-bottom: 12px;
+    }
+
+    .firefly {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background: white;
+      border-radius: 50%;
+      opacity: 0.6;
+      animation: twinkle 10s infinite ease-in-out;
+    }
+
+    .petal {
+      position: fixed;
+      top: -40px;
+      font-size: 20px;
+      animation: fall 10s linear infinite;
+      pointer-events: none;
+    }
+
+    @keyframes fall {
+      to {
+        transform: translateY(120vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
+
+    @keyframes twinkle {
+      0% { transform: translate(0, 0) scale(1); opacity: 0.2; }
+      50% { transform: translate(100px, -80px) scale(1.5); opacity: 0.8; }
+      100% { transform: translate(-60px, 120px) scale(1); opacity: 0.2; }
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(255,0,120,0.15), transparent 70%);
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      animation: pulse 3s infinite ease-in-out;
+      z-index: 0;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: translate(-50%, -50%) scale(1); opacity: 0.2; }
+      50% { transform: translate(-50%, -50%) scale(1.3); opacity: 0.4; }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="heart">❤️ My Dearest Miriam ❤️</h1>
-        <p>My love for you is not bound by time—it is deep, unwavering, and infinite.</p>
-        <p>Through every joy and every challenge, you remain the most valuable part of my life.</p>
-        <p>You are my strength, my peace, and the most beautiful soul I have ever known.</p>
-        <p>Forever and always, I cherish you. 💜</p>
-    </div>
+
+  <div class="letter">
+    <h2>Dear [Friend’s Name],</h2>
+    <p>
+      Some people arrive in life like spring after a long winter—bright, soft, and healing. You’re that person. A calming presence, a vibrant spirit, and a spark that lights up ordinary days.
+    </p>
+    <p>
+      You’ve been a reminder that kindness doesn’t need an audience, and that loyalty lives in the small things. Here’s to more memories, cozy talks, and moments we’ll laugh about forever.
+    </p>
+    <p>
+      Stay uniquely you. The world needs more of your light.
+    </p>
+    <p>— With good vibes,<br><strong>Chidugam</strong></p>
+  </div>
+
+  <!-- Floating petals -->
+  <div class="petal" style="left: 10%; animation-delay: 0s;">🌸</div>
+  <div class="petal" style="left: 25%; animation-delay: 2s;">🌸</div>
+  <div class="petal" style="left: 50%; animation-delay: 4s;">🌸</div>
+  <div class="petal" style="left: 75%; animation-delay: 6s;">🌸</div>
+  <div class="petal" style="left: 90%; animation-delay: 8s;">🌸</div>
+
+  <!-- Fireflies -->
+  <div class="firefly" style="top:20%; left:15%; animation-delay: 0s;"></div>
+  <div class="firefly" style="top:60%; left:80%; animation-delay: 2s;"></div>
+  <div class="firefly" style="top:35%; left:50%; animation-delay: 5s;"></div>
+  
 </body>
 </html>
