--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
   <div class="letter">
-    <h2>Dear [Friend’s Name],</h2>
+    <h2>Dear Miriam,</h2>
     <p>
       Some people arrive in life like spring after a long winter—bright, soft, and healing. You’re that person. A calming presence, a vibrant spirit, and a spark that lights up ordinary days.
     </p>
@@ -111,7 +111,7 @@
     <p>
       Stay uniquely you. The world needs more of your light.
     </p>
-    <p>— With good vibes,<br><strong>Chidugam</strong></p>
+    <p>— With good vibes,<br><strong>smiles</strong></p>
   </div>
 
   <!-- Floating petals -->
